--- a/front/package.json
+++ b/front/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
@@ -10,11 +11,13 @@
     "axios": "^1.13.1",
     "bootstrap": "^5.3.8",
     "emailjs-com": "^3.2.0",
+    "framer-motion": "^12.23.24",
     "react": "^19.2.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-scripts": "^5.0.1",
+    "react-tsparticles": "^2.12.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
