--- a/front/public/manifest.json
+++ b/front/public/manifest.json
@@ -1,6 +1,11 @@
 {
   "short_name": "Tsehay",
-  "name": "Tsehayinesh Belete portfolio",
+  "name": "Tsehayinesh Belete | Portfolio",
+  "description": "The personal portfolio website of Tsehayinesh Belete — Computer Science student, web developer, and creative problem solver.",
+  "start_url": ".",
+  "display": "browser",
+  "theme_color": "#f5b7b1",
+  "background_color": "#ffffff",
   "icons": [
     {
       "src": "favicon.ico",
@@ -8,18 +13,9 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "src": "logo.png",
+      "sizes": "256x256",
+      "type": "image/png"
     }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  ]
 }
